[fix] More color contrast and better radiocheckbox padding

--- a/skelvanilla-default/variables-skelvanilla.less
+++ b/skelvanilla-default/variables-skelvanilla.less
@@ -49,7 +49,7 @@
 @ls-radiocheckox-checked-bg:            @btn-primary-hover-bg;
 @ls-radiocheckox-border-radius:         @border-radius-base;
 
-@ls-radiocheckoxpadding-vertical:       @padding-large-vertical*1.3;
+@ls-radiocheckoxpadding-vertical:       @padding-base-vertical;
 @ls-radiocheckoxpadding-horizontal:     @padding-large-horizontal; // Usage *2 and /2
 
 // Usage with template-skelvanilla-awesome-checkbox
