--- a/skelvanilla-default/variables.less
+++ b/skelvanilla-default/variables.less
@@ -488,19 +488,19 @@
 //== Form states and alerts
 //
 @state-success-text:             #316132;
-@state-success-bg:               #dff0d8;
+@state-success-bg:               #E1FEDB;
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
-@state-info-text:                #26566E;
-@state-info-bg:                  #d9edf7;
+@state-info-text:                #18466E;
+@state-info-bg:                  #DDF1FB;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
-@state-warning-text:             #6B552E;
-@state-warning-bg:               #fcf6c9;
+@state-warning-text:             #603B2E;
+@state-warning-bg:               #FAF4D5;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              #9C2A27;
-@state-danger-bg:                #f2dede;
+@state-danger-text:              #8E140D;
+@state-danger-bg:                #FFEBF0;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
 
